# code-factory-4-design

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  install.bat  install.py  install.sh  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish-pypi.yml
docs/: ADOPTION.md
prestige_design/: SKILL.md  __init__.py  _build_provenance.py  adapters.py  adoption.py  attribution.py  audit.py  benchmarks.py  biases.py  brief.py  challenge.py  cli.py  cta_hooks.py  mobile_judge.py  provenance.py  purpose.py  render_audit.py  score.py  theme.py  tokens.py  workflows.py
prestige_design/benchmark_cases/: react-css-module-hardcode.DESIGN.md  react-css-module-hardcode.html  react-css-module-hardcode.json  static-clean.DESIGN.md  static-clean.html  static-clean.json  tailwind-built-css.DESIGN.md  tailwind-built-css.html  tailwind-built-css.json
references/: DESIGN.template.md  cognitive-fluency.md  hero-halo.md  peak-end.md  premium-template.html  trust-engineering.md
tests/: test_prestige.py
